--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
           </div>
 
           <div class=" col-lg-8 align-items-stretch order-1 order-lg-2 img" style="float: right;data-aos=" zoom-in" data-aos-delay="150"" data-aos=" fade-up">
-                <a href="#"><img src="assets/img/sodo/download.png" alt="downloadapp"></a>
+                <a href="#"><img src="assets/img/sodo/download.PNG" alt="downloadapp"></a>
             </div>
             <!-- <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/download.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div> -->
           </div>
@@ -512,7 +512,7 @@
                   <div class="col-xs-4 col-md-4 user-img"><img src="assets/img/sodo/quotation-mark.png" />
                     <h3 style="color: orange;margin-left:10px; font-style: bold;">Insightful</h3>
                   </div>
-                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q1.png" /></div>
+                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q1.PNG" /></div>
                 </div>
                   <h5 class="font-weight" style="margin-top:20px;"><strong>SoDo differently has been a guiding light for making my own app. SoDo team collaborated from basic building till application testing and its touch.</strong></h5>
                 <span class="devider d-inline-block my-3"></span>
@@ -531,7 +531,7 @@
                   <div class="col-xs-4 col-md-4"><img src="assets/img/sodo/quotation-mark.png" />
                     <h3 style="color: orange;margin-left:10px; font-style: bold;">Insightful</h3>
                   </div>
-                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q2.png" /></div>
+                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q2.PNG" /></div>
                 </div>
                 <h5 class="font-weight" style="margin-top:20px;"><strong>The concept of the app is very innovative. It helps to find the right person as per work requirements. Also,this app does not contain unwanted ads or any bugs</strong></h5>
                 <span class="devider d-inline-block my-3"></span>
@@ -549,7 +549,7 @@
                   <div class="col-xs-4 col-md-4"><img src="assets/img/sodo/quotation-mark.png" />
                     <h3 style="color: orange;margin-left:10px; font-style: bold;">Insightful</h3>
                   </div>
-                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q1.png" /></div>
+                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q1.PNG" /></div>
                 </div>
                 <h5 class="font-weight" style="margin-top:20px;"><strong>SoDo differently has been a guiding light for making my own app. SoDo team collaborated from basic building till application testing and its touch.</strong></h5>
                 <span class="devider d-inline-block my-3"></span>
@@ -568,7 +568,7 @@
                   <div class="col-xs-4 col-md-4"><img src="assets/img/sodo/quotation-mark.png" />
                     <h3 style="color: orange;margin-left:10px; font-style: bold;">Insightful</h3>
                   </div>
-                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q2.png" /></div>
+                  <div class="col-xs-6 col-md-6"><img src="assets/img/sodo/q2.PNG" /></div>
                 </div>
               <h5 class="font-weight" style="margin-top:20px;"><strong>The concept of the app is very innovative. It helps to find the right person as per work requirements. Also,this app does not contain unwanted ads or any bugs</strong></h5>
                 <span class="devider d-inline-block my-3"></span>
@@ -593,7 +593,7 @@
           </div>
           <div class="row ceo-container">
             <div class="col-lg-5 ceo-img" data-aos="fade-right">
-              <img src="assets/img/sodo/ceo1.png" class="img-fluid" alt="ceo picture" height="300px" width="340px" style="text-align: center">
+              <img src="assets/img/sodo/ceo1.PNG" class="img-fluid" alt="ceo picture" height="300px" width="340px" style="text-align: center">
               <h4 style="color: orange; font-weight: bolder;">Gaurav Sood <p>Founder & CEO</p> </h6>
             </div>
             <div class="col-lg-7" data-aos="fade-left">
@@ -758,7 +758,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom: 5%;">
           <div class="col">
             <div class="card">
-              <img src="assets/img/sodo/b11.png" class="card-img-top" alt="blog1" />
+              <img src="assets/img/sodo/b11.PNG" class="card-img-top" alt="blog1" />
               <div class="authdetails">
                 <span>
                   <p style="float: left;;">Author: Sodo
@@ -778,7 +778,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="assets/img/sodo/b22.png" class="card-img-top" alt="blog2" />
+              <img src="assets/img/sodo/b22.PNG" class="card-img-top" alt="blog2" />
               <div class="authdetails">
                 <span>
                   <p style="float: left;;">Author: Sodo
@@ -798,7 +798,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="assets/img/sodo/b33.png" class="card-img-top" alt="blog3" />
+              <img src="assets/img/sodo/b33.PNG" class="card-img-top" alt="blog3" />
               <div class="authdetails">
                 <span>
                   <p style="float: left;;">Author: Sodo
